# 085-Tambur-Efficient-Loss-Recovery-for-Videoconferencing-via-Streaming-Codes

./: citation.txt
H264_player/: receiver  receiver.c  sender  sender.c
hmve/: hmve.py  mv_analysis.py  psnr.py
src/: Makefile.am
src/app/: h264encoder.cc  h264encoder.hh
src/h264/: Makefile.am  h264decoder.cc  h264decoder.hh  h264encoder.cc  h264encoder.hh  video_receiver  video_receiver.cc  video_sender  video_sender.cc
src/video/: sdl.cc  sdl.hh
tambur/etc/: load_traces.py  trace_generator.py
